@@ -24,6 +24,16 @@ UNIXPATH = ${TALER_RUNTIME_DIR}/merchant.http
 UNIXPATH_MODE = 660
 
 
+# Maximum wire fee to permit by default.  You most certainly want to
+# adjust at least the currency.
+# DEFAULT_MAX_WIRE_FEE = "KUDOS:0.10"
+
+# Which fraction of an exessivly high wire fee is the customer expected
+# to cover?  Must be a positive integer representing the expected
+# average number of transactions aggregated by exchanges.  1 is
+# always safe (financially speaking).
+DEFAULT_WIRE_FEE_AMORTIZATION = 1
+
 # Where does the backend store the merchant's private key?
 KEYFILE = ${TALER_DATA_HOME}/merchant/merchant.priv
 
