@@ -95,6 +95,11 @@ struct MerchantInstance
      once we implement #4939 */
 
   /**
+   * Which wire method is @e j_wire using?
+   */
+  const char *wire_method;
+
+  /**
    * Wire details for this instance
    */
   struct json_t *j_wire;
@@ -218,6 +223,17 @@ struct TM_HandlerContext
  * Our wire format details in JSON format (with salt).
  */
 extern json_t *j_wire;
+
+/**
+ * Default maximum wire fee to assume, unless stated differently in the proposal
+ * already.
+ */
+extern struct TALER_Amount default_max_wire_fee;
+
+/**
+ * Default factor for wire fee amortization.
+ */
+extern unsigned long long default_wire_fee_amortization;
 
 /**
  * Hash of our wire format details as given in #j_wire.
