@@ -36,6 +36,7 @@ WIREFORMAT = test
 # section like X-wireformat and merchant-instance-X
 INSTANCES = tor default
 
+
 [exchange-wire-test]
 # Enable 'test' for testing of the actual coin operations.
 ENABLE = YES
